deployment/k8s/career-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: career-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: career
    spec:
      containers:
        - name: career
          image: hoya0220/career-service
          imagePullPolicy: IfNotPresent
  selector:
    matchLabels:
      app: career
---
apiVersion: v1
kind: Service
metadata:
  name: career-service
spec:
  selector:
    app: career
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
