deployment/k8s/dashboard-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: hoya0220/dashboard-service
          imagePullPolicy: IfNotPresent
  selector:
    matchLabels:
      app: dashboard
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  selector:
    app: dashboard
  ports:
    - port: 9000
      targetPort: 9000
  type: ClusterIP
