deployment/k8s/gateway-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: hoya0220/gateway-service
          imagePullPolicy: IfNotPresent
  selector:
    matchLabels:
      app: gateway
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway
  ports:
    - port: 8085
      targetPort: 8085
  type: ClusterIP
