deployment/k8s/oauth2-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: oauth2
    spec:
      containers:
        - name: oauth2
          image: hoya0220/oauth2-service
          imagePullPolicy: IfNotPresent
  selector:
    matchLabels:
      app: oauth2
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-service
spec:
  selector:
    app: oauth2
  ports:
    - port: 9090
      targetPort: 9090
  type: ClusterIP
