deployment/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - bhhan.net
        - admin.bhhan.net
      secretName: bhhan-net-tls
  rules:
    - host: admin.bhhan.net
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: gateway-service
              servicePort: 8085
    - host: bhhan.net
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: portfolio-service
              servicePort: 3000
